Updated a bunch of configs

--- a/config/botaniatweaks.cfg
+++ b/config/botaniatweaks.cfg
@@ -4,9 +4,9 @@
 
 balance {
     # How does the Orechid determine its cost and speed to run?
-    # "Default": The Orechid will be cheap if Garden of Glass is loaded.
-    # "Forge GoG": The Orechid will always be cheap to run, regardless of if Garden of Glass is loaded.
-    # "Force No GoG": The Orechid will be expensive to run, even in Garden of Glass. [default: default]
+    # "default": The Orechid will be cheap if Garden of Glass is loaded.
+    # "force_gog": The Orechid will always be cheap to run, even if Garden of Glass is not present.
+    # "force_no_gog": The Orechid will be expensive to run, even in Garden of Glass mode. [default: default]
     S:cheapOrechid=default
 
     # Should crafting recipes with the Spork be enabled? These recipes provide more expensive paths to corporea sparks, but are available earlier in the game (they don't require going to the End or elven technology).
@@ -86,6 +86,23 @@ balance {
         I:shotsPerBurst=1
     }
 
+    craftycrate {
+        # Should the Crafty Crate require mana to craft items? [default: false]
+        B:advancedCraftyCrate=false
+
+        # If true, the crate will immediately empty itself if it tries to perform a craft and does not have enough mana; if false, the craft will simply wait until it does. Makes it really hard to automate, good luck! [default: false]
+        B:advancedCraftyCrateHardMode=false
+
+        # How much mana does the crafty crate use per-item in the recipe (empty slots and Crafting Placeholders don't count?) Default value is one burst from a redstone spreader. [range: 1 ~ 2147483647, default: 160]
+        I:crateManaPerItem=160
+    }
+
+}
+
+
+compat {
+    # Can the Horn of the Wild harvest crops from Agricraft? [default: true]
+    B:dootableAgricraft=true
 }
 
 
@@ -95,6 +112,9 @@ etc {
 
     # Can dispensers shoot glass bottles to turn them in to Ender Air in the End dimension? This allows for automation of Ender Air, which was not previously possible. [default: true]
     B:enderAirDispenser=true
+
+    # Should Botania Tweaks keep statistics on the total amount of mana generated, across all flowers and dimensions? [default: true]
+    B:keepManaGenerationStatistics=true
 
     # Can players place tiny potatoes in flower pots? Please don't disable this, it's very cute. [default: true]
     B:pottedTinyPotato=true
