--- a/config/charset/modules.cfg
+++ b/config/charset/modules.cfg
@@ -23,6 +23,7 @@ compat {
     B:"mcmultipart:simplelogic.gates"=true
     B:"opencomputers:audio.storage"=true
     B:"opencomputers:lib"=true
+    B:"redstonepaste:lib"=true
     B:"storage.barrels:tweak.carry"=true
 }
 
@@ -87,8 +88,14 @@ overrides {
     # Fixes player directional damage animation. [Profile: FORCED]
     S:tweak.fix.playerdamageanimation=DEFAULT
 
+    # Holding a map in one hand and a compass in another will make the compass point to the map's center. [Profile: FORCED]
+    S:tweak.mapCompass=DEFAULT
+
     # Allow type-based control of mob spawning. [Profile: FORCED]
     S:tweak.mobControl=DEFAULT
+
+    # Makes EntityItems picked up in order from oldest to youngest. [Profile: FORCED]
+    S:tweak.orderedPickup=DEFAULT
 
     # Allows players to push TNT around by hand or projectile [Profile: FORCED]
     S:tweak.pushableTnt=DEFAULT
@@ -104,6 +111,12 @@ overrides {
 
     # [Profile: FORCED, off by default!]
     S:tweak.remove.vanillaStyleTools=DEFAULT
+
+    # Harvest crops by right-clicking! [Profile: FORCED]
+    S:tweak.rightClickHarvest=DEFAULT
+
+    # Left-clicking farmland with a shovel turns it back into dirt. [Profile: FORCED]
+    S:tweak.shovelUntill=DEFAULT
 
     # Forces a void overworld. [Profile: FORCED, off by default!]
     S:tweak.voidGenerator=DEFAULT
