--- a/config/chiselsandbits.cfg
+++ b/config/chiselsandbits.cfg
@@ -89,6 +89,14 @@ crafting {
     B:alexiy.finestuff.blocks.BlockBetterStone=true
     B:alexiy.finestuff.blocks.BlockEnergyDetector=true
     B:alexiy.finestuff.blocks.BlockSwitch=true
+    B:alsender.earthworks.block.Block_Chalk=true
+    B:alsender.earthworks.block.Block_Gabion=true
+    B:alsender.earthworks.block.Block_Wood_Shingle=true
+    B:alsender.earthworks.block.ModBlock=true
+    B:alsender.earthworks.block.ModBlockFacing=true
+    B:alsender.earthworks.block.ModRotatedPillar=true
+    B:alsender.earthworks.block.timber.Daub_Cob=true
+    B:alsender.earthworks.block.timber.Plaster=true
     B:appeng.block.misc.BlockQuartzFixture=true
     B:appeng.block.misc.BlockTinyTNT=true
     B:appeng.decorative.solid.BlockChargedQuartzOre=true
@@ -175,6 +183,19 @@ crafting {
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.GypsumPillars=true
     B:com.globbypotato.rockhounding_surface.blocks.white_sands.WhiteSand=true
     B:com.jaquadro.minecraft.storagedrawers.block.BlockTrim=true
+    B:com.legacy.aether.blocks.BlockSunAltar=true
+    B:com.legacy.aether.blocks.decorative.BlockPresent=true
+    B:com.legacy.aether.blocks.decorative.BlockSkyrootBookshelf=true
+    B:com.legacy.aether.blocks.decorative.BlockSkyrootPlank=true
+    B:com.legacy.aether.blocks.decorative.BlockZanite=true
+    B:com.legacy.aether.blocks.dungeon.BlockDungeonBase=true
+    B:com.legacy.aether.blocks.dungeon.BlockPillar=true
+    B:com.legacy.aether.blocks.natural.BlockAetherDirt=true
+    B:com.legacy.aether.blocks.natural.BlockAetherLog=true
+    B:com.legacy.aether.blocks.natural.BlockHolystone=true
+    B:com.legacy.aether.blocks.natural.BlockQuicksoil=true
+    B:com.legacy.aether.blocks.natural.ore.BlockAmbrosiumOre=true
+    B:com.legacy.aether.blocks.natural.ore.BlockZaniteOre=true
     B:com.lothrazar.cyclicmagic.block.BlockSoundSuppress=true
     B:com.lothrazar.cyclicmagic.component.library.BlockLibraryController=true
     B:com.lothrazar.cyclicmagic.component.ore.BlockDimensionOre=true
@@ -195,8 +216,10 @@ crafting {
     B:com.progwml6.natura.overworld.block.logs.BlockOverworldLog2=true
     B:com.progwml6.natura.overworld.block.logs.BlockRedwoodLog=true
     B:com.progwml6.natura.overworld.block.planks.BlockOverworldPlanks=true
+    B:com.teamwizardry.refraction.common.block.BlockReflectiveAlloyBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSBlock=true
     B:com.themastergeneral.moglowstone.blocks.GSOre=true
+    B:com.xcompwiz.mystcraft.block.BlockCrystal=true
     B:de.sanandrew.mods.immersivecables.block.BlockCoil=true
     B:ferro2000.immersivetech.common.blocks.stone.BlockStoneDecoration=true
     B:fi.dy.masa.autoverse.block.BlockSensor=true
@@ -229,6 +252,7 @@ crafting {
     B:lumien.randomthings.block.BlockPod=true
     B:lumien.randomthings.block.BlockQuartzLamp=true
     B:lumien.randomthings.block.BlockRainbowLamp=true
+    B:lumien.randomthings.block.BlockSidedRedstone=true
     B:lumien.randomthings.block.BlockStainedBrick=true
     B:lumien.randomthings.block.BlockSuperLubricentStone=true
     B:mcjty.deepresonance.blocks.MachineFrame=true
