--- a/config/essentials.cfg
+++ b/config/essentials.cfg
@@ -1,6 +1,8 @@
 # Configuration file
 
 internal {
+    # 0 to 100
+    D:"% chance of Fertile Soil creating a plant per growth tick. (Default 100)"=100.0
     S:"Item ids for wrench items. Should be in format 'modid:itemregistryname', ex. minecraft:apple or crossroads:wrench." <
         essentials:wrench
         crossroads:liech_wrench
@@ -19,7 +21,9 @@ internal {
         immersiveengineering:tool
      >
     I:"Range of the brazier witch-blocking effect. Set to 0 to disable. (Default 64)"=64
+    B:"Should the Item Chute require Crossroads rotary power when Crossroads is installed? (Default false)"=false
     B:"Show the Crossroads wrench in the creative menu? (Default true)"=true
+    B:"Show the wrench in the creative menu? (Default true)"=true
 }
 
 
