--- a/config/forestry/common.cfg
+++ b/config/forestry/common.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.2.0
+~CONFIG_VERSION: 1.2.1
 
 crafting {
     # Enables the crafting recipe for bronze. [default: true]
@@ -64,6 +64,27 @@ performance {
 
     # Enables particle effects. Note that Forestry respects Minecraft's reduced particle video settings. [default: true]
     B:particleFX=true
+}
+
+
+power {
+
+    types {
+        # Enable MJ power support. [default: true]
+        B:mj=true
+
+        # Enable Redstone Flux power support. [default: true]
+        B:rf=true
+
+        # Enable Tesla power support. [default: true]
+        B:tesla=true
+    }
+
+    display {
+        # The format power will be displayed in in engine/machine interfaces. [default: RF] [valid: [RF, FE, MJ, TESLA]]
+        S:mode=RF
+    }
+
 }
 
 
@@ -160,10 +181,10 @@ tweaks {
     }
 
     capsule {
-        #  [default: false]
+        # Enables the function that cans and capsules can pick up fluids from the world. [default: false]
         B:capsulePickup=false
 
-        #  [default: false]
+        # Capsules are no longer consumed after being emptied. [default: false]
         B:capsuleReuseable=false
     }
 
@@ -203,7 +224,8 @@ world {
             #--------------------------------------------------------------------------------------------------------#
             # Disables the generation of a specific hive in a specific biome or in a biome with a specific biome
             # type. Just add the registry name of the biome or the name of the biome type to the property of the
-            # hive. Every biome type / registry name has to be in a seperate line.
+            # hive. Every biome type / registry name has to be in a seperate line. The global type can be used to
+            # blacklist a biome from all hive generation.
             ##########################################################################################################
 
             blacklist {
@@ -212,6 +234,8 @@ world {
                 S:end <
                  >
                 S:forest <
+                 >
+                S:global <
                  >
                 S:jungle <
                  >
@@ -243,6 +267,8 @@ world {
         }
 
         trees {
+            S:biomeblacklist <
+             >
             I:dimBlacklist <
              >
             I:dimWhitelist <
