--- a/config/ftbutilities.cfg
+++ b/config/ftbutilities.cfg
@@ -19,6 +19,9 @@ auto_shutdown {
     # Enables auto-shutdown.
     B:enabled=false
 
+    # Enables auto-shutdown in singleplayer worlds.
+    B:enabled_singleplayer=false
+
     # Server will automatically shut down after X hours.
     # Time Format: HH:MM. If the system time matches a value, server will shut down.
     # It will look for closest value available that is not equal to current time.
@@ -52,6 +55,9 @@ backups {
     # Max: 9
     I:compression_level=1
 
+    # Disables level saving while performing backup.
+    B:disable_level_saving=true
+
     # Prints (current size | total size) when backup is done.
     B:display_file_size=true
 
@@ -75,6 +81,9 @@ backups {
 
 
 chat {
+    # Adds ~ to player names that have changed nickname to prevent trolling.
+    B:add_nickname_tilde=false
+
     # Min: 0
     # Max: 10000000
     I:admin_history_limit=10000
@@ -201,6 +210,33 @@ world {
 
     # Unloads erroring chunks if dimension isn't loaded or some other problem occurs.
     B:unload_erroring_chunks=false
+
+    ##########################################################################################################
+    # logging
+    #--------------------------------------------------------------------------------------------------------#
+    # Logs different events in local/ftbutilities/world.log file.
+    ##########################################################################################################
+
+    logging {
+        # Logs block breaking.
+        B:block_broken=true
+
+        # Logs block placement.
+        B:block_placed=true
+
+        # Enables world logging.
+        B:enabled=false
+
+        # Includes creative players in world logging.
+        B:include_creative_players=false
+
+        # Includes fake players in world logging.
+        B:include_fake_players=false
+
+        # Logs item clicking in air.
+        B:item_clicked_in_air=true
+    }
+
 }
 
 
