--- a/config/mage/mage.cfg
+++ b/config/mage/mage.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 plugins {
+    # Exposes FXAA support. [default: true]
+    B:"mage:antialiasing"=true
+
     # Adds MCPatcher-compatible custom lightmap support. [default: true]
     B:"mage:customLightmap"=true
 
