--- a/config/nuclearcraft.cfg
+++ b/config/nuclearcraft.cfg
@@ -132,6 +132,9 @@ fission {
     # Can fission reactors overheat?
     B:fission_overheat=true
 
+    # Will fission reactors explode when they overheat?
+    B:fission_explosions=false
+
     # Minimum side length of fission structures.
     I:fission_min_size=1
 
