--- a/config/oreveins.cfg
+++ b/config/oreveins.cfg
@@ -1,6 +1,11 @@
 # Configuration file
 
 general {
+    # If you notice that your veins (especially large ones) are being cut off at chunk boundaries, then try increacing this value. Warning: it will have an impact on world generation performance, so don't go overboard.
+    # Min: 0
+    # Max: 10
+    I:EXTRA_CHUNK_SEARCH_RANGE=0
+
     # Stop all vanilla ore gen calls (OreGenEvent.GenerateMineable)
     B:NO_ORES=false
 
