--- a/config/pneumaticcraft/thirdparty.cfg
+++ b/config/pneumaticcraft/thirdparty.cfg
@@ -8,10 +8,12 @@
     "opencomputers|core": true,
     "crafttweaker": true,
     "cofhcore": true,
+    "thaumcraft": true,
     "mcmultipart": true,
     "enderio": true,
     "igwmod": true,
     "ic2": true,
+    "opencomputers": true,
     "buildcraftcore": true,
     "forestry": true,
     "appliedenergistics2": true
