--- a/config/quark.cfg
+++ b/config/quark.cfg
@@ -51,12 +51,14 @@ _modules {
 
 automation {
     B:"Animals eat floor food"=true
+    B:Chute=true
     B:"Dispenser records"=true
     B:"Dispensers place blocks"=true
     B:"Dispensers place seeds"=true
     B:"Ender watcher"=true
     B:"Obsidian pressure plate"=true
     B:"Piston Block Breakers"=true
+    B:"Pistons Push and Pull Items"=true
     B:"Pistons move t es"=true
     B:"Rain detector"=true
 
@@ -71,7 +73,7 @@ automation {
             botania:specialflower
          >
 
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - blockdispenser
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -79,7 +81,7 @@ automation {
     }
 
     "ender watcher" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - botania
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -113,7 +115,7 @@ automation {
     }
 
     "animals eat floor food" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - betterwithmods
         #  - easybreeding
         #  - animania
@@ -127,12 +129,16 @@ automation {
         S:"Custom Seeds" <
          >
 
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - botania
         #  - animania
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
         B:"Force Enabled"=false
+    }
+
+    "pistons push and pull items" {
+        D:"Push Strength"=0.47999998927116394
     }
 
 }
@@ -276,6 +282,10 @@ building {
         B:"Enable walls"=true
     }
 
+    "vertical wood planks" {
+        B:"Enable Vertical Stained Planks"=true
+    }
+
 }
 
 
@@ -302,7 +312,7 @@ client {
     B:"Visual stat display"=true
 
     "food tooltip" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - appleskin
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -339,7 +349,7 @@ client {
             biomesoplenty:grass
          >
 
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - toughasnails
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -400,6 +410,7 @@ client {
         B:"Override Diorite"=true
         B:"Override Glass"=true
         B:"Override Granite"=true
+        B:"Override Observer"=true
         B:"Override Piston Models"=true
         B:"Override Pumpkin Front Face"=false
     }
@@ -438,7 +449,7 @@ decoration {
     }
 
     "flat item frames" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - strait
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -471,7 +482,7 @@ decoration {
     }
 
     "charcoal block" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - actuallyadditions
         #  - mekanism
         # This is done to prevent content overlap.
@@ -488,7 +499,7 @@ experimental {
     # This feature is an incomplete test, and not fit for regular gameplay. Feel free to enable it to mess around but it may explode horribly. Don't report bugs with it.
     # To make a colored light, use a Lit Redstone Lamp and put the color of Stained Glass you want under it.
     # For obvious reasons, this is incompatible with Optifine.
-    #
+    # 
     B:"Colored lights"=false
 
     # Suppresses all STDOUT (and STDERR, if enabled) messages so they don't show up in the console.
@@ -559,7 +570,7 @@ management {
     }
 
     "press f in the inventory to switch item to main hand" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - visiblearmorslots
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -573,7 +584,7 @@ management {
         # Enable replacing your tools with tools of the same type but not the same item
         B:"Enable Loose Matching"=true
 
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - inventorytweaks
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -667,7 +678,7 @@ management {
     }
 
     "inventory sorting" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - inventorytweaks
         #  - inventorysorter
         # This is done to prevent content overlap.
@@ -700,6 +711,7 @@ misc {
     B:"Slime bucket"=true
     B:"Soul powder"=true
     B:"Throwable dragon breath"=true
+    B:"Utility recipes"=true
 
     "endermites into shulkers" {
         # The chance (1 in X) for an Endermite to turn into a Shulker.
@@ -812,6 +824,12 @@ misc {
         I:"Required Scales per Elytra"=1
     }
 
+    "utility recipes" {
+        B:"Dispenser Recipe"=true
+        B:"Enable Minecarts"=true
+        B:"Repeater Recipe"=true
+    }
+
 }
 
 
@@ -881,7 +899,9 @@ tweaks {
     }
 
     "double doors open together" {
-        # This feature disables itself if any of the following mods are loaded:
+        B:"Allow Villagers to use Double Doors"=true
+
+        # This feature disables itself if any of the following mods are loaded: 
         #  - malisisdoors
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -908,7 +928,7 @@ tweaks {
     "improved sleeping" {
         B:"Enable AFK"=true
 
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - morpheus
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -949,7 +969,7 @@ tweaks {
     }
 
     "quick armor swapping" {
-        # This feature disables itself if any of the following mods are loaded:
+        # This feature disables itself if any of the following mods are loaded: 
         #  - iberia
         # This is done to prevent content overlap.
         # You can turn this on to force the feature to be loaded even if the above mods are also loaded.
@@ -997,7 +1017,7 @@ vanity {
 
         # Allow custom emotes to run function files when a user prompts them.
         # To attach a function file to any given emote, simply place a .mcfunction file with the same name as your .emote file (sans extension) in /quark_emotes.
-        # Command output from emote functions is enabled only if both "Custom Emote Dev Mode" and the "commandBlockOutput" gamerule are enabled.
+        # Command output from emote functions is enabled only if both "Custom Emote Dev Mode" and the "commandBlockOutput" gamerule are enabled. 
         B:"Custom Emote Functions"=false
 
         # The list of Custom Emotes to be loaded.
@@ -1046,6 +1066,7 @@ world {
     B:"Depth mobs"=true
     B:"Generate clay underground like dirt"=false
     B:"Guardians spawn in oceans"=true
+    B:"Nether fossils"=true
     B:"Nether smoker"=true
     B:"Pathfinder maps"=true
     B:"Pirate ships"=true
@@ -1150,7 +1171,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1406,7 +1427,7 @@ world {
             #  [default: [0]]
             S:Dimensions <
                 0
-		6
+                6
              >
 
             #  [default: false]
@@ -1475,7 +1496,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1543,7 +1564,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1654,7 +1675,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1722,7 +1743,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1778,7 +1799,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1834,7 +1855,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1890,7 +1911,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -1944,7 +1965,7 @@ world {
                 #  [default: [0]]
                 S:Dimensions <
                     0
-		    6
+                    6
                  >
 
                 #  [default: false]
@@ -2015,7 +2036,7 @@ world {
         # Each custom map must be on its own line.
         # The format for a custom map is as follows:
         # <id>,<level>,<min_price>,<max_price>,<color>,<name>
-        #
+        # 
         # With the following descriptions:
         #  - <id> being the biome's ID NAME. You can find vanilla names here - https://minecraft.gamepedia.com/Biome#Biome_IDs
         #  - <level> being the Cartographer villager level required for the map to be unlockable
@@ -2023,7 +2044,7 @@ world {
         #  - <max_price> being the most expensive (in Emeralds) the map can be
         #  - <color> being a hex color (without the #) for the map to display. You can generate one here - http://htmlcolorcodes.com/
         #  - <name> being the display name of the map
-        #
+        # 
         # Here's an example of a map to locate Ice Mountains:
         # minecraft:ice_mountains,2,8,14,7FE4FF,Ice Mountains Pathfinder Map
         S:"Custom Map Info" <
@@ -2260,4 +2281,11 @@ world {
         B:"Make Realistic Default"=false
     }
 
+    "nether fossils" {
+        # The rarity of a fossil in a chunk. Higher means fewer fossils.
+        I:"Fossil Chance"=25
+    }
+
 }
+
+
