--- a/config/randomtweaks/randomtweaks.cfg
+++ b/config/randomtweaks/randomtweaks.cfg
@@ -146,6 +146,10 @@ client {
     # Default: true
     B:spawnEggsCreativeTab=true
 
+    # Whether to start the game on the Multiplayer screen.
+    # Default: false
+    B:startOnMultiplayerScreen=false
+
     # Whether to enable stepup.
     # Default: false
     B:stepup=false
@@ -233,7 +237,7 @@ client {
         # Default: true
         B:fovChangesStatusMessage=true
 
-        # Enables the Noclip keybind, which toggles between /gamemode c and /gamemode sp.
+        # Enables the Noclip keybind, which toggles between /gamemode creative and /gamemode spectator.
         # Default: true
         B:noclip=true
 
