--- a/config/randomthings.cfg
+++ b/config/randomthings.cfg
@@ -74,6 +74,7 @@ worldgen {
     B:Lotus=true
     B:MagicHood=true
     B:Nature-Core=true
+    B:NumberedSpectreCoils=true
     B:PeaceCandle=true
     B:PitcherPlants=false
     B:Sakanade=true
