--- a/config/signals.cfg
+++ b/config/signals.cfg
@@ -1,6 +1,9 @@
 # Configuration file
 
 general {
+    # When true, disallows chunk load upgrades to be crafted and used.
+    B:"Disable chunk load upgrades"=false
+
     # ONLY SET TO FALSE IN CASE OF CRASHES. With this set to false, Signals will not work at all!
     B:"Enable rail network"=true
 
