--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -1,6 +1,6 @@
 # Configuration file
 
-~CONFIG_VERSION: 1.12.2-2.5c
+~CONFIG_VERSION: 1.12.2-2.5f
 
 dump {
     # Enable this to keep track of all the entries.
