Disabled a few Mystcraft symbols

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -196,7 +196,41 @@ symbol {
         B:modgradient.enabled=true
         B:modhalf.enabled=true
         B:modmat_blockcrystal_0.enabled=true
+        B:modmat_coal_ore_0.enabled=true
+        B:modmat_diamond_ore_0.enabled=true
+        B:modmat_dirt_0.enabled=true
+        B:modmat_emerald_ore_0.enabled=true
+        B:modmat_end_stone_0.enabled=true
+        B:modmat_flowing_lava_0.enabled=true
+        B:modmat_flowing_water_0.enabled=true
         B:modmat_fluidblockblackink_0.enabled=true
+        B:modmat_glass_0.enabled=true
+        B:modmat_glowstone_0.enabled=true
+        B:modmat_gold_ore_0.enabled=true
+        B:modmat_ice_0.enabled=true
+        B:modmat_iron_ore_0.enabled=true
+        B:modmat_lapis_ore_0.enabled=true
+        B:modmat_log2_0.enabled=true
+        B:modmat_log2_1.enabled=true
+        B:modmat_log_0.enabled=true
+        B:modmat_log_1.enabled=true
+        B:modmat_log_2.enabled=true
+        B:modmat_log_3.enabled=true
+        B:modmat_nether_brick_0.enabled=true
+        B:modmat_netherrack_0.enabled=true
+        B:modmat_obsidian_0.enabled=true
+        B:modmat_packed_ice_0.enabled=true
+        B:modmat_quartz_ore_0.enabled=false
+        B:modmat_redstone_ore_0.enabled=false
+        B:modmat_sandstone_0.enabled=true
+        B:modmat_snow_0.enabled=true
+        B:modmat_stone_0.enabled=true
+        B:modmat_stone_1.enabled=true
+        B:modmat_stone_2.enabled=true
+        B:modmat_stone_3.enabled=true
+        B:modmat_stone_4.enabled=true
+        B:modmat_stone_5.enabled=true
+        B:modmat_stone_6.enabled=true
         B:modnoon.enabled=true
         B:modnorth.enabled=true
         B:modrising.enabled=true
@@ -259,6 +293,7 @@ symbol {
         B:modmat_fluidconcrete_0.enabled=false
         B:modmat_fluidethanol_0.enabled=false
         B:modmat_fluidplantoil_0.enabled=false
+        B:modmat_molten_constantan_0.enabled=true
         B:modmat_molten_uranium_0.enabled=false
     }
 
@@ -620,7 +655,7 @@ symbol {
         B:modmat_fluid_hydrogen_0.enabled=false
         B:modmat_fluid_iron_nak_0.enabled=false
         B:modmat_fluid_iron_nak_hot_0.enabled=false
-        B:modmat_fluid_koh_0.enabled=true
+        B:modmat_fluid_koh_0.enabled=false
         B:modmat_fluid_lapis_0.enabled=false
         B:modmat_fluid_lapis_nak_0.enabled=false
         B:modmat_fluid_lapis_nak_hot_0.enabled=false
@@ -636,7 +671,7 @@ symbol {
         B:modmat_fluid_magnesium_nak_hot_0.enabled=false
         B:modmat_fluid_nak_0.enabled=false
         B:modmat_fluid_nak_hot_0.enabled=false
-        B:modmat_fluid_naoh_0.enabled=true
+        B:modmat_fluid_naoh_0.enabled=false
         B:modmat_fluid_neptunium_236_0.enabled=false
         B:modmat_fluid_neptunium_236_fluoride_0.enabled=false
         B:modmat_fluid_neptunium_236_fluoride_flibe_0.enabled=false
@@ -664,8 +699,8 @@ symbol {
         B:modmat_fluid_plutonium_fluoride_0.enabled=false
         B:modmat_fluid_plutonium_fluoride_flibe_0.enabled=false
         B:modmat_fluid_potassium_0.enabled=false
-        B:modmat_fluid_potassium_fluoride_solution_0.enabled=true
-        B:modmat_fluid_potassium_hydroxide_solution_0.enabled=true
+        B:modmat_fluid_potassium_fluoride_solution_0.enabled=false
+        B:modmat_fluid_potassium_hydroxide_solution_0.enabled=false
         B:modmat_fluid_quartz_0.enabled=false
         B:modmat_fluid_quartz_nak_0.enabled=false
         B:modmat_fluid_quartz_nak_hot_0.enabled=false
@@ -673,8 +708,8 @@ symbol {
         B:modmat_fluid_redstone_nak_0.enabled=false
         B:modmat_fluid_redstone_nak_hot_0.enabled=false
         B:modmat_fluid_sodium_0.enabled=false
-        B:modmat_fluid_sodium_fluoride_solution_0.enabled=true
-        B:modmat_fluid_sodium_hydroxide_solution_0.enabled=true
+        B:modmat_fluid_sodium_fluoride_solution_0.enabled=false
+        B:modmat_fluid_sodium_hydroxide_solution_0.enabled=false
         B:modmat_fluid_sulfur_0.enabled=false
         B:modmat_fluid_sulfur_dioxide_0.enabled=false
         B:modmat_fluid_sulfur_trioxide_0.enabled=false
@@ -851,8 +886,10 @@ symbol {
 
     contenttweaker {
         B:modmat_crude_steel_0.enabled=false
+        B:modmat_impuresteel_0.enabled=false
         B:modmat_irradiated_blood_0.enabled=false
         B:modmat_monster_essence_0.enabled=false
+        B:modmat_quicklime_0.enabled=false
         B:modmat_un_precipitated_molten_gold_0.enabled=false
         B:modmat_unrefined_molten_iron_0.enabled=false
     }
