Fixed bronze ingots being craftable

--- a/config/unidict/UniDict.cfg
+++ b/config/unidict/UniDict.cfg
@@ -225,6 +225,7 @@ resources {
         unidict:dustinvar_x3_size.3
         unidict:dustbronze_x4_size.4
         unidict:dustelectrum_x2_size.2
+	unidict:ingotbronze_x4_size.4
      >
 
     # resources to be black-listed.
