Fixed pebbles not generating

--- a/config/terraqueous.cfg
+++ b/config/terraqueous.cfg
@@ -27,7 +27,7 @@ general {
 
         # Adds: Breakable ground objects
         # IDs: doodads
-        B:addDoodads=false
+        B:addDoodads=true
 
         # Adds: An Enchanting Table that uses EnderPowder, and an EnderMonocle to read from it
         # IDs: ender_table, ender_monocle
@@ -956,7 +956,7 @@ general {
         doodads {
             B:generateDoodad_Bone=true
             B:generateDoodad_Burnium=false
-            B:generateDoodad_Endimium=true
+            B:generateDoodad_Endimium=false
             B:generateDoodad_Stick=true
             B:generateDoodad_Stone=true
         }
