--- a/config/Waystones.cfg
+++ b/config/Waystones.cfg
@@ -22,7 +22,7 @@ client {
 
 general {
     # If enabled, everyone can create global waystones, not just players in creative mode.
-    B:"Allow Global Waystones for Everyone"=false
+    B:"Allow Global Waystones for Everyone"=true
 
     # The amount of blocks per xp level requirement.
     I:"Blocks per XP Level"=500
