Fixed Gadgetry wrench not working with morphtool

--- a/config/morphtool.cfg
+++ b/config/morphtool.cfg
@@ -19,6 +19,8 @@ general {
 	immersivepetroleum=immersiveengineering
 	engineersdoors=immersivenegineering
 	immersivetech=immersiveengineering
+	gadgetrymachines=gadgetrycore
+	gadgetrytransmission=gadgetrycore
      >
     B:"Morph in the offhand instead of mainhand"=false
     S:"Whitelisted Items" <
