Disabled ore block Mystcraft pages

--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -196,20 +196,20 @@ symbol {
         B:modgradient.enabled=true
         B:modhalf.enabled=true
         B:modmat_blockcrystal_0.enabled=true
-        B:modmat_coal_ore_0.enabled=true
-        B:modmat_diamond_ore_0.enabled=true
+        B:modmat_coal_ore_0.enabled=false
+        B:modmat_diamond_ore_0.enabled=false
         B:modmat_dirt_0.enabled=true
-        B:modmat_emerald_ore_0.enabled=true
+        B:modmat_emerald_ore_0.enabled=false
         B:modmat_end_stone_0.enabled=true
         B:modmat_flowing_lava_0.enabled=true
         B:modmat_flowing_water_0.enabled=true
         B:modmat_fluidblockblackink_0.enabled=true
         B:modmat_glass_0.enabled=true
         B:modmat_glowstone_0.enabled=true
-        B:modmat_gold_ore_0.enabled=true
+        B:modmat_gold_ore_0.enabled=false
         B:modmat_ice_0.enabled=true
-        B:modmat_iron_ore_0.enabled=true
-        B:modmat_lapis_ore_0.enabled=true
+        B:modmat_iron_ore_0.enabled=false
+        B:modmat_lapis_ore_0.enabled=false
         B:modmat_log2_0.enabled=true
         B:modmat_log2_1.enabled=true
         B:modmat_log_0.enabled=true
