--- a/config/mystcraft/balance.cfg
+++ b/config/mystcraft/balance.cfg
@@ -634,6 +634,11 @@ fluids {
     S:fluid.biomass.instability.factor_accessibility=
     S:fluid.biomass.instability.factor_flat=
     S:fluid.biomass.seabanned=
+    S:fluid.blood.cardrank=
+    S:fluid.blood.grammar=
+    S:fluid.blood.instability.factor_accessibility=
+    S:fluid.blood.instability.factor_flat=
+    S:fluid.blood.seabanned=
     S:fluid.boric_acid.cardrank=
     S:fluid.boric_acid.grammar=
     S:fluid.boric_acid.instability.factor_accessibility=
@@ -734,6 +739,11 @@ fluids {
     S:fluid.concrete.instability.factor_accessibility=
     S:fluid.concrete.instability.factor_flat=
     S:fluid.concrete.seabanned=
+    S:fluid.constantan.cardrank=
+    S:fluid.constantan.grammar=
+    S:fluid.constantan.instability.factor_accessibility=
+    S:fluid.constantan.instability.factor_flat=
+    S:fluid.constantan.seabanned=
     S:fluid.coolant.cardrank=
     S:fluid.coolant.grammar=
     S:fluid.coolant.instability.factor_accessibility=
@@ -1882,6 +1892,11 @@ fluids {
     S:fluid.honey.instability.factor_accessibility=
     S:fluid.honey.instability.factor_flat=
     S:fluid.honey.seabanned=
+    S:fluid.hot_spring_water.cardrank=
+    S:fluid.hot_spring_water.grammar=
+    S:fluid.hot_spring_water.instability.factor_accessibility=
+    S:fluid.hot_spring_water.instability.factor_flat=
+    S:fluid.hot_spring_water.seabanned=
     S:fluid.hydrofluoric_acid.cardrank=
     S:fluid.hydrofluoric_acid.grammar=
     S:fluid.hydrofluoric_acid.instability.factor_accessibility=
@@ -1896,6 +1911,11 @@ fluids {
     S:fluid.ice.instability.factor_accessibility=
     S:fluid.ice.instability.factor_flat=
     S:fluid.ice.seabanned=
+    S:fluid.impuresteel.cardrank=
+    S:fluid.impuresteel.grammar=
+    S:fluid.impuresteel.instability.factor_accessibility=
+    S:fluid.impuresteel.instability.factor_flat=
+    S:fluid.impuresteel.seabanned=
     S:fluid.invar.cardrank=
     S:fluid.invar.grammar=
     S:fluid.invar.instability.factor_accessibility=
@@ -2293,6 +2313,11 @@ fluids {
     S:fluid.plutonium_fluoride_flibe.instability.factor_accessibility=
     S:fluid.plutonium_fluoride_flibe.instability.factor_flat=
     S:fluid.plutonium_fluoride_flibe.seabanned=
+    S:fluid.poison.cardrank=
+    S:fluid.poison.grammar=
+    S:fluid.poison.instability.factor_accessibility=
+    S:fluid.poison.instability.factor_flat=
+    S:fluid.poison.seabanned=
     S:fluid.potassium.cardrank=
     S:fluid.potassium.grammar=
     S:fluid.potassium.instability.factor_accessibility=
@@ -2328,6 +2353,11 @@ fluids {
     S:fluid.quartz_nak_hot.instability.factor_accessibility=
     S:fluid.quartz_nak_hot.instability.factor_flat=
     S:fluid.quartz_nak_hot.seabanned=
+    S:fluid.quicklime.cardrank=
+    S:fluid.quicklime.grammar=
+    S:fluid.quicklime.instability.factor_accessibility=
+    S:fluid.quicklime.instability.factor_flat=
+    S:fluid.quicklime.seabanned=
     S:fluid.radaway.cardrank=
     S:fluid.radaway.grammar=
     S:fluid.radaway.instability.factor_accessibility=
@@ -2348,6 +2378,11 @@ fluids {
     S:fluid.redstone_nak_hot.instability.factor_accessibility=
     S:fluid.redstone_nak_hot.instability.factor_flat=
     S:fluid.redstone_nak_hot.seabanned=
+    S:fluid.sand.cardrank=
+    S:fluid.sand.grammar=
+    S:fluid.sand.instability.factor_accessibility=
+    S:fluid.sand.instability.factor_flat=
+    S:fluid.sand.seabanned=
     S:fluid.seed.oil.cardrank=
     S:fluid.seed.oil.grammar=
     S:fluid.seed.oil.instability.factor_accessibility=
