--- a/config/plustic.cfg
+++ b/config/plustic.cfg
@@ -10,6 +10,12 @@ materials {
     # Set to false to prevent Alumite from being loaded [default: true]
     B:"Enable material alumite"=true
 
+    # Set to false to prevent Amber from being loaded [default: true]
+    B:"Enable material amber"=true
+
+    # Set to false to prevent Amethyst from being loaded [default: true]
+    B:"Enable material amethyst"=true
+
     # Set to false to prevent Bloodwood from being loaded [default: true]
     B:"Enable material bloodwood_plustic"=true
 
@@ -51,6 +57,9 @@ materials {
 
     # Set to false to prevent Lumium from being loaded [default: true]
     B:"Enable material lumium_plustic"=true
+
+    # Set to false to prevent Malachite from being loaded [default: true]
+    B:"Enable material malachite_gem"=true
 
     # Set to false to prevent Manasteel from being loaded [default: true]
     B:"Enable material manasteel"=true
@@ -97,11 +106,17 @@ materials {
     # Set to false to prevent Signalum from being loaded [default: true]
     B:"Enable material signalum_plustic"=true
 
+    # Set to false to prevent Tanzanite from being loaded [default: true]
+    B:"Enable material tanzanite"=true
+
     # Set to false to prevent Terrasteel from being loaded [default: true]
     B:"Enable material terrasteel"=true
 
     # Set to false to prevent TNT from being loaded [default: true]
     B:"Enable material tnt"=true
+
+    # Set to false to prevent Topaz from being loaded [default: true]
+    B:"Enable material topaz"=true
 }
 
 
