--- a/config/pneumaticcraft/thirdparty.cfg
+++ b/config/pneumaticcraft/thirdparty.cfg
@@ -6,6 +6,7 @@
     "computercraft": true,
     "waila": true,
     "opencomputers|core": true,
+    "botania": true,
     "crafttweaker": true,
     "cofhcore": true,
     "thaumcraft": true,
