--- a/config/refraction.cfg
+++ b/config/refraction.cfg
@@ -22,6 +22,12 @@ balancing {
 
 
 general {
+    # Walking through a beam will set non_players on fire.
+    B:all_beam_harm_non_players=true
+
+    # Walking through a beam will set players on fire.
+    B:all_beam_harm_players=true
+
     # The amount of times a beam is allowed to bounce or reflect MAXIMUM. If this number is decreased, inputBeams will stop after reflecting or bouncing for that amount of times. This is mainly a safety check against trapped infinitely bouncing inputBeams.
     I:beam_bounce_limit=50
 
