--- a/config/mystcraft/symbols.cfg
+++ b/config/mystcraft/symbols.cfg
@@ -101,7 +101,7 @@ symbol {
         B:biome39.enabled=true
         B:biome4.enabled=true
         B:biome40.enabled=true
-        B:biome41.enabled=true
+        B:biome41.enabled=false
         B:biome42.enabled=true
         B:biome43.enabled=true
         B:biome44.enabled=true
